Manual module creation
https://github.com/xmlking/ngx-starter-kit/issues/8

--- a/nx.json
+++ b/nx.json
@@ -170,6 +170,11 @@
         "child-module"
       ]
     },
+    "gridmap": {
+      "tags": [
+        "child-module"
+      ]
+    },
     "notifications": {
       "tags": [
         "public-module"
