--- a/apps/webapp-e2e/tsconfig.e2e.json
+++ b/apps/webapp-e2e/tsconfig.e2e.json
@@ -24,6 +24,8 @@
 
   , "../../libs/grid/src/index.ts"
 
+  , "../../libs/gridmap/src/index.ts"
+
   , "../../libs/not-found/src/index.ts"
 
   ,"../../node_modules/api-ai-javascript/index.ts"
