--- a/apps/webapp/tsconfig.app.json
+++ b/apps/webapp/tsconfig.app.json
@@ -17,6 +17,8 @@
 
   , "../../libs/grid/src/index.ts"
 
+  , "../../libs/gridmap/src/index.ts"
+
   , "../../libs/not-found/src/index.ts"
 
   ,"../../node_modules/api-ai-javascript/index.ts"
