--- a/package.json
+++ b/package.json
@@ -134,7 +134,7 @@
     "@angular/language-service": "^6.1.0",
     "@compodoc/compodoc": "^1.1.3",
     "@nestjs/testing": "^5.1.0",
-    "@nrwl/schematics": "^6.1.1",
+    "@nrwl/schematics": "^6.2.0-beta.5",
     "@types/dotenv": "^4.0.3",
     "@types/hammerjs": "^2.0.35",
     "@types/helmet": "0.0.38",
