--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
-<<<<<<< HEAD
-  "name": "coord-angular",
-  "version": "1.0.0-RC.1",
-=======
-  "name": "coord-angular",
+  "name": "ngx-starter-kit",
   "version": "1.0.0-RC.5",
->>>>>>> upstream/master
   "description": "Angular-NestJS Starter Kit Monorepo",
   "author": "Sumanth Chinthagunta <xmlking@gmail.com>",
   "license": "MIT",
@@ -61,23 +56,6 @@
   },
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
-    "@angular/animations": "^6.1.0",
-    "@angular/cdk": "^6.4.1",
-    "@angular/cdk-experimental": "^6.4.1",
-    "@angular/common": "^6.1.0",
-    "@angular/compiler": "^6.1.0",
-    "@angular/core": "^6.1.0",
-    "@angular/flex-layout": "^6.0.0-beta.17",
-    "@angular/forms": "^6.1.0",
-    "@angular/material": "^6.4.1",
-    "@angular/material-moment-adapter": "^6.4.1",
-    "@angular/platform-browser": "^6.1.0",
-    "@angular/platform-browser-dynamic": "^6.1.0",
-    "@angular/pwa": "^0.7.1",
-    "@angular/router": "^6.1.0",
-    "@angular/service-worker": "^6.1.0",
-=======
     "@angular/animations": "^6.1.3",
     "@angular/cdk": "^6.4.5",
     "@angular/cdk-experimental": "^6.4.5",
@@ -93,7 +71,6 @@
     "@angular/pwa": "^0.7.4",
     "@angular/router": "^6.1.3",
     "@angular/service-worker": "^6.1.3",
->>>>>>> upstream/master
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/microservices": "^5.1.0",
@@ -147,21 +124,6 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular-devkit/build-ng-packagr": "^0.7.1",
-    "@angular-devkit/build-angular": "^0.7.1",
-    "ng-packagr": "^4.0.1",
-    "tsickle": ">=0.32.1",
-    "tslib": "^1.9.3",
-    "typescript": "2.9.2",
-    "@angular/cli": "^6.1.1",
-    "@angular/http": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@compodoc/compodoc": "^1.1.3",
-    "@nestjs/testing": "^5.1.0",
-    "@nrwl/schematics": "^6.2.0-beta.5",
-=======
     "@angular/compiler-cli": "^6.1.3",
     "@angular-devkit/build-ng-packagr": "^0.7.4",
     "@angular-devkit/build-angular": "^0.7.4",
@@ -175,17 +137,12 @@
     "@compodoc/compodoc": "^1.1.3",
     "@nestjs/testing": "^5.1.0",
     "@nrwl/schematics": "^6.2.0",
->>>>>>> upstream/master
     "@types/dotenv": "^4.0.3",
     "@types/hammerjs": "^2.0.35",
     "@types/helmet": "0.0.38",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.3",
-<<<<<<< HEAD
-    "@types/node": "^10.5.4",
-=======
     "@types/node": "^10.7.1",
->>>>>>> upstream/master
     "@types/nodemailer": "^4.6.2",
     "@types/passport": "0.4.6",
     "@types/passport-jwt": "^3.0.1",
@@ -198,24 +155,15 @@
     "jasmine-core": "^3.2.1",
     "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "^4.2.1",
-<<<<<<< HEAD
-    "jest": "^23.4.2",
-    "karma": "^2.0.5",
-=======
     "jest": "^23.5.0",
     "karma": "^3.0.0",
->>>>>>> upstream/master
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "loaders.css": "^0.1.2",
     "nodemon": "^1.18.3",
-<<<<<<< HEAD
-    "prettier": "^1.14.0",
-=======
     "prettier": "^1.14.2",
->>>>>>> upstream/master
     "protractor": "^5.4.0",
     "rimraf": "^2.6.2",
     "rxjs-tslint-rules": "^4.7.2",
@@ -223,11 +171,7 @@
     "supertest": "^3.1.0",
     "ts-jest": "^23.1.3",
     "ts-loader": "^4.4.2",
-<<<<<<< HEAD
-    "ts-node": "^7.0.0",
-=======
     "ts-node": "^7.0.1",
->>>>>>> upstream/master
     "tsconfig-paths": "^3.5.0",
     "tslint": "^5.11.0",
     "webpack-bundle-analyzer": "^2.13.1",
